# music-tools

./: .cz.toml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  jobs.yml  tests.yml
examples/: custom_interval.rs  custom_scale.rs  frequencies.rs  generic.rs  melody.rs  midi_in.rs  midi_out.rs  midi_to_grub.rs  play_frequencies.rs  play_generic.rs  play_melody.rs  play_progression.rs  play_wavetable.rs  progression.rs  seven_tone_equal_temperament.rs  test.rs  wavetable.rs
src/: audio.rs  chord.rs  common.rs  enums.rs  interval.rs  lib.rs  main.rs  midi.rs  note.rs  pitchclass.rs  rhythm.rs  scale.rs  track.rs
src/audio/: common.rs  player.rs  processor.rs  wavetable.rs
src/midi/: common.rs  parser.rs  processor.rs  track.rs
tests/: test_chords.rs  test_interval.rs  test_pitchclass.rs  test_scales.rs  test_triads.rs
