[package]
name = "music-tools"
version = "0.1.0"
authors = ["James Scoon <jamesscn@gmail.com>"]
edition = "2021"
description = "A set of tools related to music theory."
readme = "README.md"
repository = "https://github.com/Jamesscn/music-tools"
license = "MIT"
keywords = ["music", "musictheory", "harmony", "audio", "sound"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apres = "0.3.4"
rodio = "0.17.1"
regex = "1.7.3"
