[package]
name = "music-tools"
version = "0.1.0"
authors = ["James Scoon"]
edition = "2021"
description = "A set of tools related to music theory."
readme = "README.md"
repository = "https://github.com/Jamesscn/music-tools"
license = "MIT"
keywords = ["music", "musictheory", "harmony", "audio", "sound"]

[dependencies]
apres = { version = "0.3.4", optional = true}
byteorder = { version = "1.4.3", optional = true}
ordered-float = { version = "4.1.0", optional = true}
regex = "1.7.3"
rodio = { version = "0.17.1", optional = true}

[features]
audio = ["dep:rodio", "dep:ordered-float", "dep:byteorder"]
midi = ["dep:apres"]

[[example]]
name = "custom_interval"
path = "examples/custom_interval.rs"
required-features = ["audio"]

[[example]]
name = "custom_scale"
path = "examples/custom_scale.rs"
required-features = []

[[example]]
name = "midi_in"
path = "examples/midi_in.rs"
required-features = ["audio", "midi"]

[[example]]
name = "midi_out"
path = "examples/midi_out.rs"
required-features = ["midi"]

[[example]]
name = "midi_to_grub"
path = "examples/midi_to_grub.rs"
required-features = ["midi"]

[[example]]
name = "play_frequencies"
path = "examples/play_frequencies.rs"
required-features = ["audio"]

[[example]]
name = "play_generic"
path = "examples/play_generic.rs"
required-features = ["audio"]

[[example]]
name = "play_melody"
path = "examples/play_melody.rs"
required-features = ["audio"]

[[example]]
name = "play_progression"
path = "examples/play_progression.rs"
required-features = ["audio"]

[[example]]
name = "play_wavetable"
path = "examples/play_wavetable.rs"
required-features = ["audio"]

[[example]]
name = "seven_tone_equal_temperament"
path = "examples/seven_tone_equal_temperament.rs"
required-features = ["audio"]
